[tool.poetry]
name = "python_Sftp_Api"
version = "0.1.0"
description = ""
authors = ["qleoz12 <kintaroloop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.8.0"
loguru = "^0.5.3"
settings-parser = "^1.3.2"
fastapi = "^0.70.0"
redis = "^3.5.3"
python-multipart = "^0.0.5"
uvicorn = "^0.15.0"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
